--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="principal">
 		<div class="wrap">
 			<form class="formulario" action="">
-				<input type="text" id="tareaInput" placeholder="Agrega tu tarea">
+				<input type="text" id="tareaInput" class="error" placeholder="Agrega tu tarea">
 				<input type="button" class="boton" id="btn-buttom" value="Agregar Tarea">
 			</form>
 		</div>
